--- a/ee/packages/amplication-git-push-webhook-service/package.json
+++ b/ee/packages/amplication-git-push-webhook-service/package.json
@@ -30,7 +30,6 @@
     "kafkajs": "1.16.0",
     "nest-winston": "1.6.2",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "winston": "3.7.2",
     "winston-cloud-logging": "1.0.2"
   },
@@ -50,6 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "rimraf": "3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
