--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -67,6 +67,7 @@
     "cuid": "2.1.8",
     "date-fns": "2.22.1",
     "dockerode": "3.2.1",
+    "dotenv": "^16.0.1",
     "fs-extra": "10.0.1",
     "get-stream": "6.0.1",
     "graphql": "15.7.2",
