--- a/packages/amplication-code-gen-types/package.json
+++ b/packages/amplication-code-gen-types/package.json
@@ -24,9 +24,9 @@
     "fast-glob": "3.2.10",
     "jest": "27.0.6",
     "json-schema-to-typescript": "10.1.5",
-    "normalize-path": "3.0.0",
+    "normalize-path": "^3.0.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.1.1",
+    "prettier": "^2.1.1",
     "rimraf": "3.0.2",
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
@@ -45,6 +45,8 @@
     "low code"
   ],
   "dependencies": {
-    "ast-types": "^0.14.2"
+    "@nestjs/core": "^9.0.9",
+    "ast-types": "^0.14.2",
+    "lodash": "^4.17.21"
   }
 }
