--- a/helm/charts/dsg-runner-infra/values/eugene.yaml
+++ b/helm/charts/dsg-runner-infra/values/eugene.yaml
@@ -1,5 +1,8 @@
 envName: "eugene"
 
+job:
+  ttlSecondsAfterFinished: 1800
+
 dsgJobsPv:
   name: dsg-jobs-eugene-dsg
   volumeHandle: fs-0a5d600fe9ec1387f::fsap-0c0986f263735b48c
