--- a/helm/charts/dsg-runner-infra/values/staging.yaml
+++ b/helm/charts/dsg-runner-infra/values/staging.yaml
@@ -1,5 +1,8 @@
 envName: "staging"
 
+job:
+  ttlSecondsAfterFinished: 1800
+
 dsgJobsPv:
   name: dsg-jobs-staging-dsg
   volumeHandle: fs-0a5d600fe9ec1387f::fsap-0c0986f263735b48c
