--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -12,20 +12,14 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/amplication-server/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/amplication-server/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-server"
-      ],
+      "outputs": ["coverage/packages/amplication-server"],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.ts",
         "passWithNoTests": true
@@ -33,9 +27,7 @@
     },
     "test:e2e": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-server"
-      ],
+      "outputs": ["coverage/packages/amplication-server"],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.e2e.ts",
         "passWithNoTests": true,
@@ -44,13 +36,8 @@
     },
     "build": {
       "executor": "@nrwl/node:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
-      "dependsOn": [
-        "graphql:schema:generate",
-        "graphql:schema:check"
-      ],
+      "outputs": ["{options.outputPath}"],
+      "dependsOn": ["graphql:schema:generate", "graphql:schema:check"],
       "options": {
         "webpackConfig": "packages/amplication-server/webpack.config.js",
         "outputPath": "dist/packages/amplication-server",
@@ -85,15 +72,9 @@
     },
     "graphql:schema:generate": {
       "executor": "nx:run-commands",
-      "inputs": [
-        "{projectRoot}/src/**/*.ts"
-      ],
-      "dependsOn": [
-        "^db:prisma:generate"
-      ],
-      "outputs": [
-        "packages/amplication-server/src/schema.graphql"
-      ],
+      "inputs": ["{projectRoot}/src/**/*.ts"],
+      "dependsOn": ["^db:prisma:generate"],
+      "outputs": ["packages/amplication-server/src/schema.graphql"],
       "options": {
         "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register scripts/generate-graphql-schema.ts",
         "cwd": "packages/amplication-server"
@@ -101,12 +82,8 @@
     },
     "graphql:schema:check": {
       "executor": "nx:run-commands",
-      "inputs": [
-        "{projectRoot}/src/schema.graphql"
-      ],
-      "dependsOn": [
-        "graphql:schema:generate"
-      ],
+      "inputs": ["{projectRoot}/src/schema.graphql"],
+      "dependsOn": ["graphql:schema:generate"],
       "options": {
         "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register scripts/check-graphql-schema",
         "cwd": "packages/amplication-server"
@@ -116,9 +93,7 @@
       "executor": "@nx-tools/nx-docker:build",
       "options": {
         "push": false,
-        "tags": [
-          "amplication/server:latest"
-        ]
+        "tags": ["amplication/server:latest"]
       }
     }
   },
